Finished portfolio page and footer

--- a/blog.html
+++ b/blog.html
@@ -27,6 +27,7 @@
 <link href="https://fonts.googleapis.com/css?family=Roboto:500" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Raleway:500" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Coustard" rel="stylesheet">
 
 <!-- Don't need to use AREA ROLES ANYMORE - RESEARCH OTHER WAYS, reached a point where most people who need them have the technology to bypass area roles now, Use other forms of accessibilty !important -->
 
@@ -129,25 +130,22 @@
 </div>
 			
 <footer>
+	<a href="#top"><img class="back" src="images/back-to-top.png" alt="Navigational button which directs the user to top of the page" width="75" height="40"/></a>
 
-<a href="#top"><img class="back" src="images/back-to-top.png" alt="Navigational button which directs the user to top of the page" width="75" height="40"/></a>
+		<p class="footer-items">
+			&copy; Sam Bindloss <a href="http://www2.mmu.ac.uk/" title="MMU Homepage"><br>MMU 2017</a>
+		</p>
 
-<p class="disclaimer">&copy; <a href="http://www2.mmu.ac.uk/" title="MMU homepage">MMU 2017</a> | THIS IS STUDENT COURSEWORK | TUTOR <a href="mailto:r.eskins@mmu.ac.uk" title="E-mail Richard Eskins">Richard Eskins</a> | <a href="https://validator.w3.org/" title="HTML Markup Validation Service">Valid HTML</a> <br> 
+		<p class="footer-items">Social media: <br>
+			<a class="social-media" href="https://uk.linkedin.com/in/sam-bindloss-62516a103"> <img src="images/linked-in-logo.png" alt="Linked in for Sam Bindloss" width="48" height="48"> </a>
 
-Email: <a id="contact" href="mailto:sam.bindloss@hotmail.com" title="E-mail Sam Bindloss">Sam Bindloss</a> <br> 
-</p>
+			<a class="social-media" href="https://twitter.com/SamBindloss"> <img src="images/twitter-logo.png" alt="Twitter for Sam Bindloss" width="48" height="48"> </a>
+		</p>
 
-<div class="linked-in">
-
-	<a href="https://uk.linkedin.com/in/sam-bindloss-62516a103"> <img src="images/linked-in-logo.png" alt="Linked in for Sam Bindloss" width="75" height="65"> </a> 
-
-</div>
-
-<div class="twitter">
-
-	<a href="https://twitter.com/SamBindloss" title> <img src="images/twitter-logo.png" alt="Twitter for Sam Bindloss" width="70" height="57"> </a> 
-
-</div>
+	<div class="hire">
+		<h3 class="hire-item"><a href="contact.html">Available for hire.</a></h3>
+	</div>
 </footer>
+
 </body>
 </html>
