--- a/external-websites/darius-browne/index.html
+++ b/external-websites/darius-browne/index.html
@@ -55,7 +55,6 @@
 		<p>New song available on Spotify, Apple music and itunes now</p>
 		
 			
-			
 	</article>
 
 </section>
@@ -87,7 +86,7 @@
 		
 			<h2 class="youtube-heading">Youtube</h2>
 			
-			<iframe class="youtube-video" src="" frameborder="0" allowfullscreen></iframe>
+			<iframe class="youtube-video" src="https://youtu.be/hjyh-tThcWE" frameborder="0" allowfullscreen></iframe>
 			
 		
 	</article>
