Second draft on personal profile is completed. Updated all pages, fixed padding issues and media queries, further improvements still need to be made

--- a/blog-posts/optimization.html
+++ b/blog-posts/optimization.html
@@ -16,6 +16,18 @@
      href="images-pp/favicon1.ico">
  
 <title>Sam Bindloss - Performance and Optimization Blog Post</title>
+    
+<!-- Google analytics 	-->
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-102699117-1"></script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+
+gtag('config', 'UA-102699117-1');
+</script>
 
     <link rel="stylesheet" href="/style.css">
 	
@@ -24,9 +36,8 @@
 <link href="https://fonts.googleapis.com/css?family=Roboto:500" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Raleway:500" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
-
-<!-- Don't need to use AREA ROLES ANYMORE - RESEARCH OTHER WAYS, reached a point where most people who need them have the technology to bypass area roles now, Use other forms of accessibilty !important -->
-
+<link href="https://fonts.googleapis.com/css?family=Coustard" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
 
 </head>
 
@@ -48,7 +59,7 @@
 <section class="blog-banner">
 	
 	<h1 class="main-blog-heading">Performance and Optimization</h1>
-	<h3>Blog post</h3>
+	<p>Blog post</p>
 	
 </section>
 
@@ -57,8 +68,6 @@
 	<h2 class="large-blog-heading">"Why have I run out of 4g?"</h2>
 
 	<p>The words above are not something you want any of your users to say. In this blog post, I discuss how to increase the performance of web pages through the use of optimization and will delve into some of the techniques used.</p>
-
-	<!-- Harvard reference this -->
 
 	<p>In the book, <a href="https://www.amazon.com/Web-Style-Guide-4th-Foundations/dp/0300211651" title="Web Style guide book on amazon">Web Style Guide</a> by Patrick J. Lynch &amp; Sarah Horton, important data from Walmart found that <em>"conversion rate plunges if a page takes more than four seconds to load."</em> So, in that case, maybe that beautiful high-resolution image isn't such a good idea after all. </p>
 
@@ -122,25 +131,21 @@
 </section>
 
 <footer>
+	<a href="#top"><img class="back" src="/images/back-to-top.png" alt="Navigational button which directs the user to top of the page" width="75" height="40"/></a>
 
-<a href="#top"><img class="back" src="/images/back-to-top.png" alt="Navigational button which directs the user to top of the page" width="75" height="40"/></a>
+		<p class="footer-items">
+			&copy; Sam Bindloss <a href="http://www2.mmu.ac.uk/" title="MMU Homepage"><br>MMU 2017</a>
+		</p>
 
-<p class="disclaimer">&copy; <a href="http://www2.mmu.ac.uk/" title="MMU homepage">MMU 2017</a> | THIS IS STUDENT COURSEWORK | TUTOR <a href="mailto:r.eskins@mmu.ac.uk" title="E-mail Richard Eskins">Richard Eskins</a> | <a href="https://validator.w3.org/" title="HTML Markup Validation Service">Valid HTML</a> <br> 
+		<p class="footer-items">Social media: <br>
+			<a class="social-media" href="https://uk.linkedin.com/in/sam-bindloss-62516a103"> <img src="/images/linked-in-logo.png" alt="Linked in for Sam Bindloss" width="48" height="48"> </a>
 
-Email: <a id="contact" href="mailto:sam.bindloss@hotmail.com" title="E-mail Sam Bindloss">Sam Bindloss</a> <br> 
-</p>
+			<a class="social-media" href="https://twitter.com/SamBindloss"> <img src="/images/twitter-logo.png" alt="Twitter for Sam Bindloss" width="48" height="48"> </a>
+		</p>
 
-<div class="linked-in">
-
-	<a href="https://uk.linkedin.com/in/sam-bindloss-62516a103"> <img src="/images/linked-in-logo.png" alt="Linked in for Sam Bindloss" width="75" height="65"> </a> 
-
-</div>
-
-<div class="twitter">
-
-	<a href="https://twitter.com/SamBindloss" title> <img src="/images/twitter-logo.png" alt="Twitter for Sam Bindloss" width="70" height="57"> </a> 
-
-</div>
+	<div class="hire">
+		<h3 class="hire-item"><a href="/contact.html">Available for hire.</a></h3>
+	</div>
 </footer>
     
   <script src="script.js"></script>
