Footer has been touched up on, made into 2 3 column system which is fully responsive. Few minor changes have been made from testing the website with friends and family.

--- a/blog-posts/industry.html
+++ b/blog-posts/industry.html
@@ -126,26 +126,38 @@ gtag('config', 'UA-102699117-1');
 	<p>Personally, I feel lucky to have got into the industry at this particular time, considering how fast it is growing. After researching into the digital industry, I now have a much better understanding of what is required of me to excel and develop my own skills. Whether it's improving on my JavaScript, learning new languages or even networking more. I feel like by the end of my final year at University, I will be fully geared up, ready for the life ahead of me and, most importantly, <strong>Agency Ready.</strong></p>
 
 </section>
+	<footer>
+		<div class="back">
+			<a href="#top"><img alt=
+			"Navigational button which directs the user to top of the page"
+			height="40" src="/images/back-to-top.png" width="75"></a>
+		</div>
 
+		<div class="footer-container">
 
-<footer>
-	<a href="#top"><img class="back" src="/images/back-to-top.png" alt="Navigational button which directs the user to top of the page" width="75" height="40"/></a>
+			<div class="col-2">
+				<h4>Available for hire</h4>
 
-		<p class="footer-items">
-			&copy; Sam Bindloss <a href="http://www2.mmu.ac.uk/" title="MMU Homepage"><br>MMU 2017</a>
-		</p>
+				<p>If you're interested in my services, please don't hesitate to drop me an <a href="/contact.html">E-mail</a> or follow me on my active social media accounts.</p>
+			</div>
 
-		<p class="footer-items">Social media: <br>
-			<a class="social-media" href="https://uk.linkedin.com/in/sam-bindloss-62516a103"> <img src="/images/linked-in-logo.png" alt="Linked in for Sam Bindloss" width="48" height="48"> </a>
+			<div class="col-1">
+				<h4>Social Media:</h4>
 
-			<a class="social-media" href="https://twitter.com/SamBindloss"> <img src="/images/twitter-logo.png" alt="Twitter for Sam Bindloss" width="48" height="48"> </a>
-		</p>
+				<a href="https://github.com/bindloss"><img src="/images/git-logo.png" class="social-media-images" alt="Logo for Github" height="48" width="48"></a>
+				<a href="https://twitter.com/SamBindloss">
+				<img src="/images/twitter-logo.png" class="social-media-images" alt="Logo for Twitter" height="48" width="48"></a>
+				<a href="https://www.linkedin.com/in/sam-bindloss-62516a103/">
+				<img src="/images/linked-in.png" class="social-media-images" alt="Logo for Linked In" height="48" width="48"></a>
 
-	<div class="hire">
-		<h3 class="hire-item"><a href="/contact.html">Available for hire.</a></h3>
-	</div>
-</footer>
+			</div>
+
+			<div class="col-1">
+				<h4>&copy; Sam Bindloss</h4>
+				<p><a href="http://www2.mmu.ac.uk/" title="MMU Homepage"> MMU 2018</a></p>
+			</div>
+		</div>
+	</footer>
     </body>
-    
- 
+
 </html>
