--- a/blog.html
+++ b/blog.html
@@ -68,7 +68,9 @@
 		<section class="blog-intro">
 			<p>Do you want to know more about the digital industry? What about the process of how I made this site? If so, you're in the right place.</p>
 		</section>
-		<div class="triangle-right"></div>
+		<div class="triangle-right">
+			<!-- Triangle -->
+		</div>
 		<section class="blog-container3">
 			<article class="blog-content">
 
@@ -102,19 +104,36 @@
 			</article>
 		</section>
 	</section>
-	<footer>
-		<a href="#top"><img alt=
-		"Navigational button which directs the user to top of the page" class="back"
-		height="40" src="images/back-to-top.png" width="75"></a>
-		<p class="footer-items">&copy; Sam Bindloss <a href="http://www2.mmu.ac.uk/" title="MMU Homepage"><br>
-		MMU 2017</a></p>
-		<p class="footer-items">Social media:<br>
-			<a class="social-media" href="https://uk.linkedin.com/in/sam-bindloss-62516a103"><img alt=
-		"Linked in for Sam Bindloss" height="48" src="images/linked-in-logo.png"
-		width="48"></a> <a class="social-media" href="https://twitter.com/SamBindloss"><img alt="Twitter for Sam Bindloss" height=
-		"48" src="images/twitter-logo.png" width="48"></a></p>
-		<div class="hire">
-			<h3 class="hire-item"><a href="contact.html">Available for hire.</a></h3>
+<footer>
+		<div class="back">
+			<a href="#top"><img alt=
+			"Navigational button which directs the user to top of the page"
+			height="40" src="images/back-to-top.png" width="75"></a>
+		</div>
+
+		<div class="footer-container">
+
+			<div class="col-2">
+				<h4>Available for hire</h4>
+
+				<p>If you're interested in my services, please don't hesitate to drop me an <a href="contact.html">E-mail</a> or follow me on my active social media accounts.</p>
+			</div>
+
+			<div class="col-1">
+				<h4>Social Media:</h4>
+
+				<a href="https://github.com/bindloss"><img src="images/git-logo.png" class="social-media-images" alt="Logo for Github" height="48" width="48"></a>
+				<a href="https://twitter.com/SamBindloss">
+				<img src="images/twitter-logo.png" class="social-media-images" alt="Logo for Twitter" height="48" width="48"></a>
+				<a href="https://www.linkedin.com/in/sam-bindloss-62516a103/">
+				<img src="images/linked-in.png" class="social-media-images" alt="Logo for Linked In" height="48" width="48"></a>
+
+			</div>
+
+			<div class="col-1">
+				<h4>&copy; Sam Bindloss</h4>
+				<p><a href="http://www2.mmu.ac.uk/" title="MMU Homepage"> MMU 2018</a></p>
+			</div>
 		</div>
 	</footer>
 </body>
