--- a/index.html
+++ b/index.html
@@ -1,110 +1,100 @@
 <!DOCTYPE html>
 <html lang="en-gb">
+
 <head>
 	<meta charset="utf-8">
-	<meta content=
-	"Personal profile of Sam Bindloss which includes skills and qualifications, previous work experience, portfolio and contact information"
-	name="description">
-	<meta content=
-	"Sam Bindloss, Personal Profile, Web development, Contact Information, Blog, Portfolio, Social Media, Manchester Metropolitan University"
-	name="keywords">
+	<meta content="Personal profile of Sam Bindloss which includes skills and qualifications, previous work experience, portfolio and contact information" name="description">
+	<meta content="Sam Bindloss, Personal Profile, Web development, Contact Information, Blog, Portfolio, Social Media, Manchester Metropolitan University" name="keywords">
 	<meta content="Sam Bindloss" name="author">
 	<meta content="width-device-width, initial-scale=1.0" name="viewport">
 	<!--[if lt IE 9]> 
         <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script> 
         <![endif]-->
-        
+
 	<!-- Google analytics   -->
 	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src=
-	"https://www.googletagmanager.com/gtag/js?id=UA-102699117-1">
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-102699117-1">
+
+
 	</script>
-	
-		<script>
-		 window.dataLayer = window.dataLayer || [];
-		 function gtag(){dataLayer.push(arguments);}
-		 gtag('js', new Date());
-		 gtag('config', 'UA-102699117-1');
-		</script>
-	
-	<link href="images-pp/favicon1.ico" rel="icon" type="image/ico">
-	
+
+	<script>
+		window.dataLayer = window.dataLayer || [];
+
+		function gtag() {
+			dataLayer.push(arguments);
+		}
+		gtag('js', new Date());
+		gtag('config', 'UA-102699117-1');
+
+	</script>
+
+	<link href="images/favicon1.ico" rel="icon" type="image/ico">
+
 	<title>Sam Bindloss - Personal Profile</title>
-	
+
 	<link href="style.css" rel="stylesheet">
-	
+
 	<!--    Google Fonts     -->
-	<link href="https://fonts.googleapis.com/css?family=Roboto:500" rel=
-	"stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Raleway:500" rel=
-	"stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:500" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Raleway:500" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
-	
+	<link href="https://fonts.googleapis.com/css?family=Coustard" rel="stylesheet">
+
 </head>
+
 <body id="top">
 	<header>
 		<div class="nav-container">
-		<nav>
-			<ul>
-				<li>
-					<a href="index.html">Home</a>
-				</li>
-				<li>
-					<a href="portfolio.html">Portfolio</a>
-				</li>
-				<li>
-					<a href="blog.html">Blog</a>
-				</li>
-				<li>
-					<a href="contact.html">Contact</a>
-				</li>
-			</ul>
-		</nav>
+			<nav>
+				<ul>
+					<li>
+						<a href="index.html">Home</a>
+					</li>
+					<li>
+						<a href="portfolio.html">Portfolio</a>
+					</li>
+					<li>
+						<a href="blog.html">Blog</a>
+					</li>
+					<li>
+						<a href="contact.html">Contact</a>
+					</li>
+				</ul>
+			</nav>
 		</div>
 	</header>
-	
+
 	<!-- BANNER -->
-	
+
 	<section class="banner">
 		<h1 class="main-heading">Sam Bindloss</h1>
 		<h2 class="small-heading">Professional Web Developer</h2>
 		<p class="button"><a href="cv.pdf" title="My CV">See my CV</a></p>
 	</section>
-	
+
 	<!-- END OF BANNER -->
-	
+
 	<!-- ABOUT SECTION -->
-	
+
 	<article class="slide-position">
 		<div class="about-heading">
 			<h2>About me.</h2>
 		</div>
 		<div class="mySlides">
 			<blockquote class="quote">
-				"A dedicated, hardworking and professional individual who sets his aims
-				high and will consistently work towards any goal to the best of his
-				ability."
+				"A dedicated, hardworking and professional individual who sets his aims high and will consistently work towards any goal to the best of his ability."
 			</blockquote>
-			
-			<p>Born in Oxfordshire and currently studying in Manchester, I am currently
-			in my third year of a (BSc) web development degree at Manchester
-			Metropolitan University <a href="http://www2.mmu.ac.uk/" title=
-			"MMU homepage">(MMU).</a></p>
+
+			<p>Born in Oxfordshire and currently studying in Manchester, I am currently in my third year of a (BSc) web development degree at Manchester Metropolitan University <a href="http://www2.mmu.ac.uk/" title="MMU homepage">(MMU).</a></p>
 		</div>
 		<div class="mySlides">
-			<p>During my time at university, I have taken on tasks such as building
-			websites as part of a group, carried out comprehensive user research and
-			have undertaken the role of managing digital projects.</p>
-			
-			<p>I have just finished working at <a href=
-			"http://www.vilebrequin.com/eu/en/home" title=
-			"Vilebrequin Website">Vilebrequin</a> over the summer break. My previous
-			jobs also include <a href="https://www.fredperry.com/" title=
-			"Fred Perry Website">Fred Perry</a> (4 years) and <a href=
-			"https://www.frenchconnection.com/" title="French Connection Website">French
+			<p>During my time at university, I have taken on tasks such as building websites as part of a group, carried out comprehensive user research and have undertaken the role of managing digital projects.</p>
+
+			<p>I have just finished working at <a href="http://www.vilebrequin.com/eu/en/home" title="Vilebrequin Website">Vilebrequin</a> over the summer break. My previous jobs also include <a href="https://www.fredperry.com/" title="Fred Perry Website">Fred Perry</a> (4 years) and <a href="https://www.frenchconnection.com/" title="French Connection Website">French
 			Connection</a>.</p>
-			
+
 		</div>
 		<div class="mySlides">
 			<h3 class="prog-lang-title">Web Technologies:</h3>
@@ -115,8 +105,7 @@
 				<li>AJAX</li>
 				<li>JSON</li>
 				<li>PHP</li>
-			</ul><a href="https://github.com/bindloss" title=
-			"Link to Sam Bindloss GitHub"><img alt="Logo for Github" height="64" src=
+			</ul><a href="https://github.com/bindloss" title="Link to Sam Bindloss GitHub"><img alt="Logo for Github" height="64" src=
 			"images/github-logo.png" width="64"></a>
 		</div>
 		<div class="display-container">
@@ -126,112 +115,84 @@
 				</div>
 				<div class="right" onclick="plusDivs(1)">
 					&#10095;
-				</div><span class="circles move hover-white" onclick=
-				"currentDiv(1)"></span> <span class="circles move hover-white" onclick=
-				"currentDiv(2)"></span> <span class="circles move hover-white" onclick=
-				"currentDiv(3)"></span>
+				</div><span class="circles move hover-white" onclick="currentDiv(1)"></span> <span class="circles move hover-white" onclick="currentDiv(2)"></span> <span class="circles move hover-white" onclick="currentDiv(3)"></span>
 			</div>
 		</div>
 	</article>
-	
+
 	<!-- END OF ABOUT SECTION -->
-	
+
 	<section class="image-container3">
 		<article class="content">
-		
+
 			<!--    BLOG    -->
-			
+
 			<div class="view view-transition">
-				<img alt="Photo of Sam working on blog post" height="632" src=
-				"images/blog-index.jpg" width="478">
+				<img alt="Photo of Sam working on blog post" height="632" src="images/blog-index.jpg" width="478">
 				<div class="mask">
 					<h2>Blog</h2>
-					<p>Are you in interested in the growth of the digital industry, the build
-					process of my personal site, SEO and optimisation? Then look no
-					further.</p><a class="info" href="blog.html">Read More</a>
+					<p>Are you in interested in the growth of the digital industry, the build process of my personal site, SEO and optimisation? Then look no further.
+					</p><a class="info" href="blog.html">Read More</a>
 				</div>
 			</div>
-			
+
 			<!--    PORTFOLIO   -->
-			
+
 			<div class="view view-transition">
-				<img alt="Front facing view of the business school at MMU on a sunny day"
-				height="632" id="mainImage" src="images/business-school.jpg" width="478">
+				<img alt="Front facing view of the business school at MMU on a sunny day" height="632" id="mainImage" src="images/business-school.jpg" width="478">
 				<div class="mask">
 					<h2>Portfolio</h2>
-					<p>Here you can find all of my previous work, ranging from being the
-					project manager of second year group projects, all the way to individually
-					building websites in my own time.</p><a class="info" href=
-					"portfolio.html">Read More</a>
+					<p>Here you can find all of my previous work, ranging from being the project manager of second year group projects, all the way to individually building websites in my own time.</p><a class="info" href="portfolio.html">Read More</a>
 				</div>
 			</div>
-			
+
 			<!-- Web Programming    -->
-			
+
 			<div class="view view-transition">
-				<img alt="Example of web programming code" height="632" src=
-				"images/web-programming.jpg" width="478">
+				<img alt="Example of web programming code" src="images/web-programming.jpg" height="632" width="478">
 				<div class="mask">
 					<h2>Web Programming</h2>
-					<p>Three self-made applications in JavaScript which includes a working
-					customer order form, a pub menu and an encryption
-					application.</p><a class="info" href=
-					"portfolio.html#programming-link">Read More</a>
+					<p>Three self-made applications in JavaScript which includes a working customer order form, a pub menu and an encryption application.
+					</p><a class="info" href="portfolio.html#programming-link">Read More</a>
 				</div>
 			</div>
 		</article>
 	</section>
 	<footer>
-		<a href="#top"><img alt=
-		"Navigational button which directs the user to top of the page" class="back"
-		height="40" src="images/back-to-top.png" width="75"></a>
-		<p class="footer-items">&copy; Sam Bindloss <a href="http://www2.mmu.ac.uk/"
-		title="MMU Homepage"><br>
-		MMU 2017</a></p>
-		
-		<p class="footer-items">Social media:<br>
-		<a class="social-media" href=
-		"https://uk.linkedin.com/in/sam-bindloss-62516a103"><img alt=
-		"Linked in for Sam Bindloss" height="48" src="images/linked-in-logo.png"
-		width="48"></a> <a class="social-media" href=
-		"https://twitter.com/SamBindloss"><img alt="Twitter for Sam Bindloss" height=
-		"48" src="images/twitter-logo.png" width="48"></a></p>
-		
-		<div class="hire">
-			<h3 class="hire-item"><a href="contact.html">Available for hire.</a></h3>
+		<div class="back">
+			<a href="#top"><img alt=
+			"Navigational button which directs the user to top of the page"
+			height="40" src="images/back-to-top.png" width="75"></a>
+		</div>
+
+		<div class="footer-container">
+
+			<div class="col-2">
+				<h4>Available for hire</h4>
+
+				<p>If you're interested in my services, please don't hesitate to drop me an <a href="contact.html">E-mail</a> or follow me on my active social media accounts.</p>
+			</div>
+
+			<div class="col-1">
+				<h4>Social Media:</h4>
+
+				<a href="https://github.com/bindloss"><img src="images/git-logo.png" class="social-media-images" alt="Logo for Github" height="48" width="48"></a>
+				<a href="https://twitter.com/SamBindloss">
+				<img src="images/twitter-logo.png" class="social-media-images" alt="Logo for Twitter" height="48" width="48"></a>
+				<a href="https://www.linkedin.com/in/sam-bindloss-62516a103/">
+				<img src="images/linked-in.png" class="social-media-images" alt="Logo for Linked In" height="48" width="48"></a>
+
+			</div>
+
+			<div class="col-1">
+				<h4>&copy; Sam Bindloss</h4>
+				<p><a href="http://www2.mmu.ac.uk/" title="MMU Homepage"> MMU 2018</a></p>
+			</div>
 		</div>
 	</footer>
 	<script src="script.js" type="text/javascript">
-	</script> 
-	
-	<script>
-	   var slideIndex = 1;
-	showDivs(slideIndex);
-
-	function plusDivs(n) {
-	 showDivs(slideIndex += n);
-	}
-
-	function currentDiv(n) {
-	 showDivs(slideIndex = n);
-	}
-
-	function showDivs(n) {
-	 var i;
-	 var x = document.getElementsByClassName("mySlides");
-	 var dots = document.getElementsByClassName("move");
-	 if (n > x.length) {slideIndex = 1}    
-	 if (n < 1) {slideIndex = x.length}
-	 for (i = 0; i < x.length; i++) {
-	    x[i].style.display = "none";  
-	 }
-	 for (i = 0; i < dots.length; i++) {
-	    dots[i].className = dots[i].className.replace(" white", "");
-	 }
-	 x[slideIndex-1].style.display = "block";  
-	 dots[slideIndex-1].className += " white";
-	}
-	   
 	</script>
+	
 </body>
+
 </html>
