--- a/external-websites/web-programming/customerform.html
+++ b/external-websites/web-programming/customerform.html
@@ -1,291 +1,352 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<title>The Shirt Company</title>
-<link href="http://55060509.webdevmmu.uk/style-guide/global.css" rel="stylesheet" type="text/css" />
+	<title>The Shirt Company</title>
+	<link rel="shortcut icon" href="../../favicon.ico" type="image/x-icon">
+	<link rel="icon" href="favicon.ico" type="image/x-icon">
+	<link rel="stylesheet" href="../../style.css">
+	<link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+	 <meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- Google analytics 	-->
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-102699117-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+
+		function gtag() {
+			dataLayer.push(arguments);
+		}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-102699117-1');
+
+	</script>
 </head>
+
 <body>
-<div class="container">
-<h1>Welcome to The Shirt Company (Est 2017)</h1>
-
-    <p>
-    	Please enter your name and place your order.
-	</p>  
-
-    <h2>Name</h2>
-
-<!-- Form elements here -->
-
-<form id="orderForm">
-
-<p>
-First name: <input type = "text" id = "firstName" placeholder="Type in first name" onkeyup="letterValidation(this)">
-
-</p>
-
-<p>Second name: <input type = "text" id = "secondName" placeholder="Type in second name" onkeyup="letterValidation(this)">
-
-</p>
-
-    <h2>Cotton Shirt</h2>
-
-<p>Price: &#163;20 per shirt</p>
-
-<p>Quantity desired: <input type = "number" id = "shirtInput" placeholder="Type number here">
-
-</p>
-
-    <h2>Cotton tie</h2>
-
-<p>Price: &#163;12 per tie</p>
-
-<p>Quantity desired: <input type = "number" id="tieInput" placeholder="Type number here"> 
-
-</p>
-
-<h2>Select customer status</h2>
-
-<p>Status:
-
-<select id="userOption">
-
-<option value="">...</option>
-<option value="opt1">Non-registered customer</option>
-<option value="opt2">Registered customer</option>
-<option value="opt3">Trade customer</option>
-
-</select>
-</p>
-
-<h2>Select delivery</h2>
-
-<p>Delivery time:</p>
-
-<p>
-
-<input type="radio" value="rad1" name="radioChoice" checked>
-7-day (&#163;2 per order)<br>
-
-<input type="radio" value="rad2" name="radioChoice">
-3-day (&#163;3 per order) <br>
-
-<input type="radio" value="rad3" name="radioChoice"> Next day (&#163;5 per order) 
-
-</p>
-
-    <h2>Check order</h2>
-
-<p>Please click here: <input type="button" id="finalOrder" value="Check your order"> </p>
-
-    </form>
-
-
-<p id="greeting"></p>
-
-<p id="results"></p>
-
-<p id="addOns"></p>
-
-<strong><p id="total"></p></strong>
-
-<em><p id="checkout"></p></em>
-
-</div>
-
-<script type="text/javascript">
-
-var button = document.getElementById("finalOrder");
-button.addEventListener("click", estimateOrder, false);
-
+	<header>
+		<div class="nav-container">
+			<nav>
+				<ul>
+					<li>
+						<a href="../../index.html" class="nav-link">Home</a>
+					</li>
+					<li>
+						<a href="../../index.html#portfolio" class="nav-link">Work</a>
+					</li>
+					<!-- Logo here -->
+					<a href="../../index.html" class="nav-logo"><img class="nav-logo" src="../../images/SB-logo.png" alt="Logo for Sam Bindloss"></a>
+					<li>
+						<a href="../../index.html#blog" class="nav-link">Blog</a>
+					</li>
+					<li>
+						<a href="#contact" class="nav-link">Contact</a>
+					</li>
+				</ul>
+			</nav>
+		</div>
+	</header>
 	
-/* 		LETTER VALIDATION		*/
+	<button title="Back to top" id="myBtn" class="scroll" role="button">
+        <span class="arrow-up">
+        	<img src="../../images/chevron-up.png" alt="Up arrow" width="32" height="32">
+        </span>
+    </button>
+    
+	<main class="prog-container">
+		<h1 class="prog-main-heading">Customer checkout form</h1>
 
-function letterValidation(inputTxt) {
+		<p>
+			Please enter your name and place your order.
+		</p>
 
-var letters = /[^a-z]/gi;
-inputTxt.value = inputTxt.value.replace(letters, "");
-}
+		<h2 class="prog-sub-header">Name</h2>
 
-	
-/* 		ORDER RESULTS 		*/
-	
-function estimateOrder()
-{
+		<!-- Form elements here -->
 
-var name1 = document.getElementById("firstName").value;
+		<form id="orderForm">
 
-	if (name1 == "") {
-window.alert("Please enter a first name")
-}
+			<p>
+				First name: <input type="text" id="firstName" placeholder="Type in first name" onkeyup="letterValidation(this)">
 
-var name2 = document.getElementById("secondName").value;
+			</p>
 
-	if (name2 == "") {
-window.alert("Please enter a second name")
-}
+			<p>Second name: <input type="text" id="secondName" placeholder="Type in second name" onkeyup="letterValidation(this)">
 
-var shirtQuantity = document.getElementById("shirtInput").value;
+			</p>
 
-	if (shirtQuantity == "") {
-window.alert("Please enter the quantity of shirts you wish to purchase")
-}
+			<h2 class="prog-sub-header">Cotton Shirt</h2>
 
-var tieQuantity = document.getElementById("tieInput").value;
+			<p>Price: &#163;20 per shirt</p>
 
-	if (tieQuantity == "") {
-window.alert("Please enter the quantity of ties you wish to purchase")
-	}
+			<p>Quantity desired: <input type="number" id="shirtInput" placeholder="Type number here">
 
-	
-/* 			RESULTS/SUBTOTALS 			*/
-	
+			</p>
 
-var shirtTotal = (shirtQuantity * 20);
+			<h2 class="prog-sub-header">Cotton tie</h2>
 
-var tieTotal = (tieQuantity * 12);
+			<p>Price: &#163;12 per tie</p>
 
-var subTotal = (shirtTotal + tieTotal);
+			<p>Quantity desired: <input type="number" id="tieInput" placeholder="Type number here">
 
+			</p>
 
-    document.getElementById("greeting");
-    greeting.innerHTML = "Hello " + name1 + " " + name2 + ". You have selected:";
-	
-	
-/* 		1 SHIRT/TIE QUANTITY 		*/
+			<h2 class="prog-sub-header">Select customer status</h2>
 
-var shirt;
-var tie;
-	
-if (shirtQuantity == 1) {
-	shirt = " Shirt";
-	subtotalDiplay = " at a cost of &#163;20 each. Subtotal: &#163;";
-	
-} else { 
-	shirt = " Shirts";
+			<p>Status:
 
-}
-	
-if (tieQuantity == 1) {
-	tie = " Tie";
-	subtotalDiplay = " at a cost of &#163;12 each. Subtotal: &#163;";
-	
-} else {
-	tie = " Ties";
-}
+			<select id="userOption">
 
+				<option value="">...</option>
+				<option value="opt1">Non-registered customer</option>
+				<option value="opt2">Registered customer</option>
+				<option value="opt3">Trade customer</option>
 
-/*	 	NO SUBTOTAL DECLARATION 		*/
+			</select>
+			</p>
 
-var shirtSubtotalDisplay = "";
+			<h2 class="prog-sub-header">Select delivery</h2>
 
-var tieSubtotalDisplay = "";
+			<p>Delivery time:</p>
 
-if (shirtQuantity == 0) {
-shirt = " Shirts";
-shirtSubtotalDisplay = "";
-shirtTotal = "";
+			<p>
 
-} else {
-shirtSubtotalDisplay = " at a cost of &#163;20 each. Subtotal: &#163;";
+				<input type="radio" value="rad1" name="radioChoice" checked> 7-day (&#163;2 per order)<br>
 
-}
+				<input type="radio" value="rad2" name="radioChoice"> 3-day (&#163;3 per order) <br>
 
-if (tieQuantity == 0) {
-tie = " Ties";
-tieSubtotalDisplay = "";
-tieTotal = "";
+				<input type="radio" value="rad3" name="radioChoice"> Next day (&#163;5 per order)
 
-} else {
-tieSubtotalDisplay = " at a cost of &#163;12 each. Subtotal: &#163;";
+			</p>
 
-}
+			<h2 class="prog-sub-header">Check order</h2>
 
+			<p>Please click here:</p>
+			<button class="portfolio-button" type="button" id="finalOrder" value="Check your order">Check your order</button>
 
-/* 		DROP DOWN MENU		*/
+		</form>
 
-var userChoice = document.getElementById("userOption").value;
 
-var userChoiceValue = "";
-	
-	if (userChoice == "") {
-window.alert("Please select customer status");
-}
+		<p id="greeting"></p>
 
-	if (userChoice == "opt1") {
-userChoiceValue = 0;
+		<p id="results"></p>
 
-	}
+		<p id="addOns"></p>
 
-	if (userChoice == "opt2") {
-userChoiceValue = subTotal * 0.10;
+		<strong><p id="total"></p></strong>
 
-	}
+		<em><p id="checkout"></p></em>
 
+	</main>
 
-	if (userChoice == "opt3") {
-userChoiceValue = subTotal * 0.20;
-		
+	<footer>
+		<ul class="social-icons" id="contact">
+			<li>
+				<a target="_blank" href="https://twitter.com/SamBindloss" class="twitter"><i class="fab fa-twitter fa-logo"></i></a>
+			</li>
+			<li>
+				<a target="_blank" href="https://uk.linkedin.com/in/sam-bindloss-62516a103" class="linkedin"><i class="fab fa-linkedin fa-logo"></i></a>
+			</li>
+		</ul>
+	</footer>
 
-	}
+	<script type="text/javascript">
+		var button = document.getElementById("finalOrder");
+		button.addEventListener("click", estimateOrder, false);
 
 
-/* 		RADIO BUTTONS 		*/
+		/* 		LETTER VALIDATION		*/
 
-var radioChoice = document.getElementById("orderForm").radioChoice;
+		function letterValidation(inputTxt) {
 
-var radioValue = "";
+			var letters = /[^a-z]/gi;
+			inputTxt.value = inputTxt.value.replace(letters, "");
+		}
 
-var radioValueChoice;
 
-for (var i = 0; i < radioChoice.length; i++) {
-	if (radioChoice[i].checked) {
-	radioValue = radioChoice[i].value;
-break;
-}
-}
+		/* 		ORDER RESULTS 		*/
 
-if (radioValue === "rad1") {
-radioValueChoice = 2;
+		function estimateOrder() {
 
-}
+			var name1 = document.getElementById("firstName").value;
 
-if (radioValue === "rad2") {
-radioValueChoice = 3;
+			if (name1 == "") {
+				window.alert("Please enter a first name")
+			}
 
-}
+			var name2 = document.getElementById("secondName").value;
 
+			if (name2 == "") {
+				window.alert("Please enter a second name")
+			}
 
-if (radioValue === "rad3") {
-radioValueChoice = 5;
+			var shirtQuantity = document.getElementById("shirtInput").value;
 
-}
+			if (shirtQuantity == "") {
+				window.alert("Please enter the quantity of shirts you wish to purchase")
+			}
 
+			var tieQuantity = document.getElementById("tieInput").value;
 
+			if (tieQuantity == "") {
+				window.alert("Please enter the quantity of ties you wish to purchase")
+			}
 
-/* 		TOTAL AND CHECKOUT 		*/
 
-var orderTotal = (subTotal - userChoiceValue) + radioValueChoice;
+			/* 			RESULTS/SUBTOTALS 			*/
 
-	document.getElementById("results");
 
- results.innerHTML = "* " + shirtQuantity + shirt  + shirtSubtotalDisplay + shirtTotal + 
-"<br>" 
-    + "* " + tieQuantity + tie + tieSubtotalDisplay + tieTotal;
+			var shirtTotal = (shirtQuantity * 20);
 
-	
-	document.getElementById("addOns").value;
+			var tieTotal = (tieQuantity * 12);
 
-addOns.innerHTML = "You have qualified for a discount of &#163;" + userChoiceValue.toFixed(2) + ". The delivery charge is &#163;" + radioValueChoice.toFixed(2) + ".";
+			var subTotal = (shirtTotal + tieTotal);
 
-	document.getElementById("total").value;
 
-total.innerHTML = "The total cost is &#163;" + orderTotal.toFixed(2);
+			document.getElementById("greeting");
+			greeting.innerHTML = "Hello " + name1 + " " + name2 + ". You have selected:";
 
 
-	document.getElementById("checkout").value;
+			/* 		1 SHIRT/TIE QUANTITY 		*/
 
-checkout.innerHTML = "If you're happy with that, please go ahead and place the order. Have an awesome day!";
-	
-}
-</script>
+			var shirt;
+			var tie;
+
+			if (shirtQuantity == 1) {
+				shirt = " Shirt";
+				subtotalDiplay = " at a cost of &#163;20 each. Subtotal: &#163;";
+
+			} else {
+				shirt = " Shirts";
+
+			}
+
+			if (tieQuantity == 1) {
+				tie = " Tie";
+				subtotalDiplay = " at a cost of &#163;12 each. Subtotal: &#163;";
+
+			} else {
+				tie = " Ties";
+			}
+
+
+			/*	 	NO SUBTOTAL DECLARATION 		*/
+
+			var shirtSubtotalDisplay = "";
+
+			var tieSubtotalDisplay = "";
+
+			if (shirtQuantity == 0) {
+				shirt = " Shirts";
+				shirtSubtotalDisplay = "";
+				shirtTotal = "";
+
+			} else {
+				shirtSubtotalDisplay = " at a cost of &#163;20 each. Subtotal: &#163;";
+
+			}
+
+			if (tieQuantity == 0) {
+				tie = " Ties";
+				tieSubtotalDisplay = "";
+				tieTotal = "";
+
+			} else {
+				tieSubtotalDisplay = " at a cost of &#163;12 each. Subtotal: &#163;";
+
+			}
+
+
+			/* 		DROP DOWN MENU		*/
+
+			var userChoice = document.getElementById("userOption").value;
+
+			var userChoiceValue = "";
+
+			if (userChoice == "") {
+				window.alert("Please select customer status");
+			}
+
+			if (userChoice == "opt1") {
+				userChoiceValue = 0;
+
+			}
+
+			if (userChoice == "opt2") {
+				userChoiceValue = subTotal * 0.10;
+
+			}
+
+
+			if (userChoice == "opt3") {
+				userChoiceValue = subTotal * 0.20;
+
+
+			}
+
+
+			/* 		RADIO BUTTONS 		*/
+
+			var radioChoice = document.getElementById("orderForm").radioChoice;
+
+			var radioValue = "";
+
+			var radioValueChoice;
+
+			for (var i = 0; i < radioChoice.length; i++) {
+				if (radioChoice[i].checked) {
+					radioValue = radioChoice[i].value;
+					break;
+				}
+			}
+
+			if (radioValue === "rad1") {
+				radioValueChoice = 2;
+
+			}
+
+			if (radioValue === "rad2") {
+				radioValueChoice = 3;
+
+			}
+
+
+			if (radioValue === "rad3") {
+				radioValueChoice = 5;
+
+			}
+
+
+
+			/* 		TOTAL AND CHECKOUT 		*/
+
+			var orderTotal = (subTotal - userChoiceValue) + radioValueChoice;
+
+			document.getElementById("results");
+
+			results.innerHTML = "* " + shirtQuantity + shirt + shirtSubtotalDisplay + shirtTotal +
+				"<br>" +
+				"* " + tieQuantity + tie + tieSubtotalDisplay + tieTotal;
+
+
+			document.getElementById("addOns").value;
+
+			addOns.innerHTML = "You have qualified for a discount of &#163;" + userChoiceValue.toFixed(2) + ". The delivery charge is &#163;" + radioValueChoice.toFixed(2) + ".";
+
+			document.getElementById("total").value;
+
+			total.innerHTML = "The total cost is &#163;" + orderTotal.toFixed(2);
+
+
+			document.getElementById("checkout").value;
+
+			checkout.innerHTML = "If you're happy with that, please go ahead and place the order. Have an awesome day!";
+
+		}
+
+	</script>
+	<script src="../../script.js" type="text/javascript"></script>
+
+
 </body>
